--- a/style.css
+++ b/style.css
@@ -99,8 +99,9 @@ p{
     backdrop-filter: blur(5px);
     top: 200px;
     transform: scale(0);
+    transition: .3s ease;
 }
-.active-popup{
+.formBox.active-popup{
     transform: scale(1);
 }
 
@@ -130,7 +131,7 @@ i{
     border-radius: 30px;
     color: rgb(248, 241, 241);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: rgb(112, 106, 106);
+    background-color: rgb(84, 94, 143);
 }
 #forgotPW{
     position: relative;
